--- a/src/app/hero-detail.component.html
+++ b/src/app/hero-detail.component.html
@@ -9,4 +9,5 @@
     <input [(ngModel)] = "hero.name" placeholder="name"> <!--双向绑定-->
   </div>
   <button (click)="goBack()">Back</button>
+  <button (click)="save()">Save</button>
 </div>
