--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -7,7 +7,9 @@
   <li *ngFor="let hero of heroes"
       [class.selected]="hero === selectedHero"
       (click)="onSelect(hero)"> <!--ngFor,属性绑定,事件-->
-    <span class="badge">{{ hero.id }}</span>{{ hero.name }}
+    <span class="badge">{{ hero.id }}</span>
+    <span>{{ hero.name }}</span>
+    <button (click)="delete(hero); $event.stopPropagation()">X</button>
   </li>
 </ul>
 <div *ngIf="selectedHero">
