angular基本构造块-模板

--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -18,4 +18,5 @@
   </h2>
   <button (click)="gotoDetail()">View Details</button>
 </div>
+<!--angular的模板语法，自定义组件-->
 <!--<my-hero-detail [hero]="selectedHero"></my-hero-detail> &lt;!&ndash;来自hero-detail组件——绑定——目标属性声明为输入属性&ndash;&gt;-->
