--- a/src/app/hero-detail.component.html
+++ b/src/app/hero-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="hero"> <!--ngIf-->
+<div *ngIf="hero"> <!--ngIf——结构型指令-->
   <h1>{{ title }}</h1>
   <h2>{{ hero.name }} details!</h2>
   <div>
@@ -6,6 +6,7 @@
   </div>
   <div>
     <label>name: </label>
+    <!--ngModel属性型指令，修改一个现有元素的外观或行为-->
     <input [(ngModel)] = "hero.name" placeholder="name"><!--双向绑定-->
     <!--使用ngModel指令组合属性绑定和事件绑定的功能-->
     <!--在双向绑定中，数据属性值通过属性绑定从组件流到输入框。-->
