--- a/src/app/click-me.component.html
+++ b/src/app/click-me.component.html
@@ -8,4 +8,5 @@
 <p>绑定用户输入事件：</p>
 <button (click)="onClickMe()">click me!</button>
 {{ clickMessage }}
-<key-up></key-up>
+<key-up></key-up><!--$event获取用户输入-->
+<loop-back></loop-back><!--引用变量获取用户输入-->
