表单——通过 ngModel 跟踪修改状态与有效性验证

--- a/src/app/hero-form.component.html
+++ b/src/app/hero-form.component.html
@@ -5,8 +5,10 @@
     <div class="form-group">
       <label for="name">Name</label>
       <input type="text" class="form-control" id="name" required
-             [(ngModel)]="model.name" name="name"><!--用name注册到表单中-->
-      ToDo: remove this: {{model.name}}
+             [(ngModel)]="model.name" name="name">
+             <!--#spy>&lt;!&ndash;用name注册到表单中&ndash;&gt;-->
+      <!--<br>TODO: remmove this: {{spy.className}}-->
+      <!--TODO: remove this: {{model.name}}-->
     </div>
 
     <div class="form-group">
