--- a/src/app/hero-form.component.html
+++ b/src/app/hero-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Hero Form</h1>
-  <form #heroForm="ngForm">
+  <form (ngSubmit)="onSubmit()" #heroForm="ngForm"><!--引用NgForm指令-->
     {{ diagnostic }}
     <div class="form-group">
       <label for="name">Name</label>
@@ -29,7 +29,7 @@
       </select>
     </div>
 
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success" [disabled]="!heroForm.form.valid">Submit</button>
     <button type="button" class="btn btn-default" (click)="newHero();heroForm.reset()">New Hero</button><!--清除所有标记-->
   </form>
 </div>
